@@ -202,10 +202,11 @@ libmp4_plugin_la_SOURCES = demux/mp4/mp4.c demux/mp4/mp4.h \
                            demux/mp4/fragments.c demux/mp4/fragments.h \
                            demux/mp4/libmp4.c demux/mp4/libmp4.h \
                            demux/mp4/languages.h \
-                           demux/asf/asfpacket.c demux/asf/asfpacket.h \
+                           demux/mp4/heif.c demux/mp4/heif.h \
                            demux/mp4/avci.h \
                            demux/mp4/color_config.h \
                            demux/mp4/essetup.c demux/mp4/meta.c \
+                           demux/asf/asfpacket.c demux/asf/asfpacket.h \
                            meta_engine/ID3Genres.h
 libmp4_plugin_la_LIBADD = $(LIBM)
 libmp4_plugin_la_LDFLAGS = $(AM_LDFLAGS)
