@@ -1,0 +1,24 @@
+/*****************************************************************************
+ * heif.h : ISO/IEC 23008-12 HEIF still picture demuxer
+ *****************************************************************************
+ * Copyright (C) 2018 Videolabs, VLC authors and VideoLAN
+ *
+ * This program is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin Street, Fifth Floor, Boston MA 02110-1301, USA.
+ *****************************************************************************/
+
+#define HEIF_DEFAULT_DURATION 10.0
+
+int  OpenHEIF ( vlc_object_t * );
+void CloseHEIF( vlc_object_t * );
