@@ -9,6 +9,9 @@ Platform support changes:
      - Android 4.1.x or later (API-16)
      - GCC 5.0 or Clang 3.4 (or equivalent)
 
+Demuxer:
+ * Support for HEIF format
+
 Codecs:
  * Support for experimental AV1 video encoding
  * WebVTT encoder
